Add exit button and fix bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Frog Runaway</string>
+    <string name="play">Play!</string>
+    <string name="welcome_to_frog_runaway">Welcome to Frog Runaway!</string>
+    <string name="exit">Exit</string>
 </resources>
